[package]
name = "runtime_tracing"
version = "0.5.14-experimental-3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

[lib]
name = "runtime_tracing"
path = "src/lib.rs"
